# patio

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .setup.sh  LICENSE.html  README.rst  cli.html  code_of_conduct.html  colo.toml  genindex.html  index.html  objects.inv  patio.toml  py-modindex.html  pyproject.toml  release_notes.html  search.html  searchindex.js
.doctrees/: LICENSE.doctree  cli.doctree  code_of_conduct.doctree  index.doctree  release_notes.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/patio/: index.doctree
.doctrees/autoapi/patio/_version/: index.doctree
.doctrees/autoapi/patio/cli/: index.doctree
.doctrees/autoapi/patio/constants/: index.doctree
.doctrees/autoapi/patio/data/: index.doctree
.doctrees/autoapi/patio/data/asset_data/: index.doctree
.doctrees/autoapi/patio/data/cems/: index.doctree
.doctrees/autoapi/patio/data/entity_ids/: index.doctree
.doctrees/autoapi/patio/data/profile_data/: index.doctree
.doctrees/autoapi/patio/exceptions/: index.doctree
.doctrees/autoapi/patio/helpers/: index.doctree
.doctrees/autoapi/patio/model/: index.doctree
.doctrees/autoapi/patio/model/ba_level/: index.doctree
.doctrees/autoapi/patio/model/ba_scenario/: index.doctree
.doctrees/autoapi/patio/model/base/: index.doctree
.doctrees/autoapi/patio/model/colo_common/: index.doctree
.doctrees/autoapi/patio/model/colo_core/: index.doctree
.doctrees/autoapi/patio/model/colo_data/: index.doctree
.doctrees/autoapi/patio/model/colo_lp/: index.doctree
.doctrees/autoapi/patio/model/colo_resources/: index.doctree
.doctrees/autoapi/patio/model/colo_results/: index.doctree
.doctrees/autoapi/patio/re_ninja/: index.doctree
.github/: dependabot.yml
.github/workflows/: bot-auto-merge.yml  docs-to_gh-pages.yml  pytest.yml  tox-pytest.yml
R/: Patio Model Economic Analysis.R  Patio Model Utilities Inputs.R  demo.R
_modules/: index.html  patio.html
_modules/patio/: _version.html  cli.html  constants.html  exceptions.html  helpers.html  re_ninja.html
_modules/patio/data/: asset_data.html  cems.html  entity_ids.html  profile_data.html
_modules/patio/model/: ba_level.html  ba_scenario.html  base.html  colo_common.html  colo_core.html  colo_data.html  colo_lp.html  colo_resources.html  colo_results.html
_sources/: cli.rst.txt  index.rst.txt  release_notes.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/patio/: index.rst.txt
_sources/autoapi/patio/_version/: index.rst.txt
_sources/autoapi/patio/cli/: index.rst.txt
_sources/autoapi/patio/constants/: index.rst.txt
_sources/autoapi/patio/data/: index.rst.txt
_sources/autoapi/patio/data/asset_data/: index.rst.txt
_sources/autoapi/patio/data/cems/: index.rst.txt
_sources/autoapi/patio/data/entity_ids/: index.rst.txt
_sources/autoapi/patio/data/profile_data/: index.rst.txt
_sources/autoapi/patio/exceptions/: index.rst.txt
_sources/autoapi/patio/helpers/: index.rst.txt
_sources/autoapi/patio/model/: index.rst.txt
_sources/autoapi/patio/model/ba_level/: index.rst.txt
_sources/autoapi/patio/model/ba_scenario/: index.rst.txt
_sources/autoapi/patio/model/base/: index.rst.txt
_sources/autoapi/patio/model/colo_common/: index.rst.txt
_sources/autoapi/patio/model/colo_core/: index.rst.txt
_sources/autoapi/patio/model/colo_data/: index.rst.txt
_sources/autoapi/patio/model/colo_lp/: index.rst.txt
_sources/autoapi/patio/model/colo_resources/: index.rst.txt
_sources/autoapi/patio/model/colo_results/: index.rst.txt
_sources/autoapi/patio/re_ninja/: index.rst.txt
_static/: documentation_options.js
activation/: env_setup.sh  r_setup.sh
autoapi/: index.html
autoapi/patio/: index.html
autoapi/patio/_version/: index.html
autoapi/patio/cli/: index.html
autoapi/patio/constants/: index.html
autoapi/patio/data/: index.html
autoapi/patio/data/asset_data/: index.html
autoapi/patio/data/cems/: index.html
autoapi/patio/data/entity_ids/: index.html
autoapi/patio/data/profile_data/: index.html
autoapi/patio/exceptions/: index.html
autoapi/patio/helpers/: index.html
autoapi/patio/model/: index.html
autoapi/patio/model/ba_level/: index.html
autoapi/patio/model/ba_scenario/: index.html
autoapi/patio/model/base/: index.html
autoapi/patio/model/colo_common/: index.html
autoapi/patio/model/colo_core/: index.html
autoapi/patio/model/colo_data/: index.html
autoapi/patio/model/colo_lp/: index.html
autoapi/patio/model/colo_resources/: index.html
autoapi/patio/model/colo_results/: index.html
autoapi/patio/re_ninja/: index.html
docs/: cli.rst  colo_patio.tex  conf.py  release_notes.rst
notebooks/: explore_results.ipynb  notebook.ipynb  power_couples_results.ipynb
r_src/: Patio Model Economic Analysis.R  Patio Model Fossil Cost Analysis.R  Patio Model Utilities Inputs.R
src/cheshire/: __init__.py  cli.py  dummy_pudl.py
src/patio/: __init__.py  cli.py  constants.py  exceptions.py  helpers.py  pkl.py  re_ninja.py
src/patio/data/: __init__.py  asset_data.py  cems.py  entity_ids.py  profile_data.py
src/patio/model/: __init__.py  ba_level.py  ba_scenario.py  base.py  colo_common.py  colo_core.py  colo_data.py  colo_lp.py  colo_resources.py  colo_results.py
src/patio/package_data/: __init__.py  ba_rules.csv  f1_purchased_power_tagged.parquet.gzip  proposed_atb.csv  re_queue.csv  re_site_ids.csv  re_sites_w_EC_flag.parquet  retirement_fixes.csv  static_unit_list.parquet  utility_ids.csv  utility_information.parquet.gzip
tests/: ba_test.py  cems_test.py  clean_repowering_test.py  colo_lp_test.py  conftest.py  console_scripts_test.py  const_test.py  data_test.py  dummy_integration_test.py  dummy_unit_test.py  model_test.py  power_couple_test.py
tests/colo_test_data/: colo.json
